# rust-template

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
